day-13-security-group-diff-igress-sam-cidr/main.tf

resource "aws_security_group" "devops-project-sami" {
  name        = "devops-project-sami"
  description = "Allow TLS inbound traffic"

 ingress {
     description      = "SSH inbound rule"
     from_port        = 22
     to_port          = 22
     protocol         = "tcp"
     cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
     description      = "HTTP inbound rule"
     from_port        = 80
     to_port          = 80
     protocol         = "tcp"
     cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
     description      = "HTTPS inbound rule"
    from_port        = 443
     to_port          = 443
     protocol         = "tcp"
     cidr_blocks      = ["0.0.0.0/0"]
 }


  /*ingress = [
    for port in [80, 443, 8080, 9000, 3000, 8082, 8081] : {
      description      = "inbound rules"
      from_port        = port
      to_port          = port
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      security_groups  = []
      self             = false
    }
  ]

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "devops-project-veera"
  }
}*/
